I forgot about resources in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,14 @@
     <url>https://astolfo.tech</url>
 
     <build>
+        <defaultGoal>clean package</defaultGoal>
+        <finalName>${project.name}</finalName>
+        <resources>
+          <resource>
+            <directory>src/main/resources</directory>
+            <filtering>true</filtering>
+          </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
