Some other changes in plugin.yml

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,5 +3,5 @@ version: ${project.version}
 main: dev.norbiros.denoriabot.Main
 
 prefix: DenoriaBOT
-authors: [Norbiros]
+authors: Norbiros
 description: This is plugin that creates discord bot for minecraft server denoria.pl!
