--- a/.github/workflows/CodeCheck.yml
+++ b/.github/workflows/CodeCheck.yml
@@ -23,7 +23,7 @@ jobs:
           languages: java
           
       - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots verify
+        run: mvn install
         
       - uses: actions/upload-artifact@v2
         name: Upload Artifact
