First attempt on Discord > Minecraft verification + directory cleanup.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,4 +6,9 @@ authors: [Norbiros]
 
 version: ${project.version}
 main: dev.norbiros.denoriabot.DenoriaBot
-softdepend: [ mcMMO ]
+
+commands:
+   polacz:
+      description: Weryfikuj swoje konto mc z kontem dc
+      usage: "&cUżycie komendy: /polacz"
+      aliases: [połącz, connect, weryfikuj, polacz-discord]
